--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prebuild": "CI=true react-scripts test --colors",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"now ./build",
+    "postdeploy": "now alias -A ./build/now.json"
+
   },
   "eslintConfig": {
     "extends": "react-app"
